# Nibbler

./: CMakeLists.txt  Makefile
core/inc/: GUI.h  Game.h  Snake.h
core/src/: Game.cpp  Snake.cpp  main.cpp
ncurses/: Makefile
ncurses/inc/: GUI.h  NCULIB.hpp
ncurses/src/: NCULIB.cpp
sdl/: Makefile
sdl/inc/: SDLLIB.h
sdl/src/: SDLLIB.cpp
sfml/: Makefile
sfml/inc/: GUI.h  SFML.h
sfml/src/: SFML.cpp
